# project_1L

./: .env.example  .gitignore  2025_matrix_results.txt  AGENT.md  EXECUTION_SPEC.md  ILH-001 Institutional Liquidity Hun.txt  OVERVIEW.md  PARAMS.md  README.md  STRATEGY.md  TRADE_RULES.md  calc_matrix.py  daily_levels.json  data_transfer_plan.md  ilh_deep_research_sample_stats.json  parse_log.py  patcher.py  project_1l.service  pyproject.toml
calendar/: tier1_events.example.csv
configs/: backtest_sma_cross_1m_smoke.json  momentum_pullback_1m_smoke.json  opening_range_breakout_15m_buffer_2ticks_1m.json  opening_range_breakout_1m.json  opening_range_breakout_1m_smoke.json  opening_range_breakout_30m_long_only_1m.json  opening_range_breakout_v2_1m_dev.json  opening_range_breakout_v2_1m_validation.json  previous_day_high_low_breakout_1m.json  previous_day_high_low_breakout_1m_smoke.json  vwap_reversion_1m.json
scripts/: archive_phase1.py  backtest_queries.sql  backtest_sma_cross_1m.py  backtest_sma_cross_1m_smoke.py  bar_queries.sql  build_bars_1minute.py  build_bars_from_trades.py  catalog_access.py  check_ts_timezone.py  check_ts_timezone_v2.py  debug_mbp_symbols.py  debug_parquet_cols.py  diagnose_signal_sensitivity.py  duckdb_build_catalog.py  duckdb_quick_check.py  excursion_analysis.py  export_ilh_sample.py  extract_trades.py  fast_backtest.py  fast_get_logs.py  inspect_ghost_books.py  inspect_ghost_books_v2.py  inspect_ghosts.py  inspect_mbp_schema.py  modify.py  parse_metrics.py  queries.sql  replay_backtest.py  replay_backtest_orb_v2_full_replacement.py  (+9 more)
(+128 files in other folders)
